Fixed WordList layout on mobile

--- a/src/Components/WordList/WordList.css
+++ b/src/Components/WordList/WordList.css
@@ -44,4 +44,24 @@
   word-spacing: .06em;
 }
 
+@media screen and (max-width: 470px) {
+  .word-item {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 0;
+    height: 30%;
+    /* margin-bottom: 0; */
+  }
+
+  .score {
+    margin-bottom: 0;
+  }
+  
+  .fas {
+    padding-top: 0;
+    margin-top: 0;
+    padding-right: 1%;
+  }
+}
+
 
